--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 maven_group = com.github.selfcrafted
 maven_version = 1.0.0-SNAPSHOT
-archives_base_name = ServerDiscovery
+archives_base_name = network-etcd
