--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Run tests
 
 on:
   push:
@@ -17,12 +17,11 @@ jobs:
       - name: Repository checkout
         uses: actions/checkout@v3
       - name: Setup Java JDK
-        uses: actions/setup-java@v3.3.0
+        uses: actions/setup-java@v3
         with:
           java-version: "17"
           distribution: "temurin"
-          cache: "gradle"
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Run tests
-        run: ./gradlew test
+      - name: Test with Gradle
+        uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
+        with:
+          arguments: test
